# template-project

./: .env  .pre-commit-config.yaml  README.md  dockerfile  makefile  pyproject.toml
.github/workflows/: ci.yml  version.yml
docker/: Dockerfile
src/: config.py  main.py
